bins/havenc/tests/cases/fail/test_enum_dup_variant.hv
//@ error: Duplicate variant 'A' in enum 'E'
enum E { A, B, A }

@export
proc main() i32 { return 0; }
